src/tests/snapshots/mu__tests__simple__cmp_neq.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Input:
2 != 2

# Result (success):
false

# Stdout:


