src/tests/snapshots/mu__tests__simple__minus_n.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Input:
-2

# Result (success):
-2

# Stdout:


