src/tests/snapshots/mu__tests__simple__not_false.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Input:
!false

# Result (success):
true

# Stdout:


