src/tests/snapshots/mu__tests__simple__opt_val.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Input:
2 ?? none

# Result (success):
2

# Stdout:


