src/tests/snapshots/mu__tests__simple__pow.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Input:
2 ** 2

# Result (success):
4

# Stdout:


