src/tests/snapshots/mu__tests__simple__sub.snap
---
source: src/tests/simple.rs
expression: snapshot
---
# Input:
2 - 2

# Result (success):
0

# Stdout:


